# otp-bar-cli

./: LICENSE  README.md  config.toml  mise.toml  otp-cli.py  otp_cli.py  pyproject.toml
tests/: test_otp_cli.py
