[project]
name = "otp-bar-cli"
version = "0.1.0"
description = "A command-line tool for generating one-time passwords (OTPs)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "tox-uv>=1.34.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
]

[tool.tox]
env_list = ["py311", "py312", "py313", "py314", "latest"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
with_dev = true
commands = [
    ["pytest"]
]
